fix container height on mobile

--- a/css/main.css
+++ b/css/main.css
@@ -7,6 +7,8 @@ body {
 
 .container {
     height: 100vh;
+    min-height: 100%;
+    height: 100%;
     background: white;
     padding: 20px;
 }
